--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
 <h2>Sign up</h2>
-
+<div class="mx-auto text-center">
+  <p>ユーザー名とe-mail<br>パスワードを入力してください。</p>
+</div>
 <%= form_with model:@user, url: user_registration_path do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
